--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="description" content="Personal portfolio website for Marc Gómez, Computer Engineering student at UPC. Showcasing projects in mobile development, full-stack development, and more." />
+    <meta name="author" content="Marc Gómez Asensio" />
+    <meta property="og:title" content="Marc Gómez - Portfolio" />
+    <meta property="og:description" content="Computer Engineering student at UPC passionate about creating innovative solutions across multiple platforms." />
+    <meta property="og:url" content="https://markuus9.github.io/" />
+    <meta property="og:type" content="website" />
+    <title>Marc Gómez - Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
